target_cpu = "x64" # or "x86"
extra_cflags = ["/MD"]
extra_cflags_c = ["/MD"]
extra_cflags_cc = ["/MD"]
extra_ldflags = ["/MD"]

is_debug = false # Change to true for debug builds
is_official_build = true
is_component_build = false

skia_compile_modules = true

skia_enable_skshaper_tests = false
skunicode_tests_enabled = false

skia_enable_svg = true
skia_enable_skottie = false
skia_enable_vulkan = false

skia_use_system_expat = false
skia_use_system_harfbuzz = false
skia_use_system_icu = false
skia_use_system_libjpeg_turbo = false
skia_use_system_libpng = false
skia_use_system_libwebp = false
skia_use_system_zlib = false
